--- a/Dockerfile_scraping
+++ b/Dockerfile_scraping
@@ -7,6 +7,8 @@ COPY scraping/environment.yml* scraping/.devcontainer/noop.txt /tmp/conda-tmp/
 RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then umask 0002 && /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
     && rm -rf /tmp/conda-tmp
 
+RUN yes | conda install mysqlclient
+
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
